@@ -11,6 +11,7 @@ python-debian (0.1.22) UNRELEASED; urgency=low
   [ Stuart Prescott ]
   * Add myself to Uploaders.
   * Change Vcs-* URLs to canonical locations.
+  * Switch build system to short form dh and pybuild.
 
  -- John Wright <jsw@debian.org>  Mon, 08 Oct 2012 00:41:32 -0700
 
